2012-11-23  Kirit Saelensminde  <kirit@felspar.com>
 Added Boost Chrono to builds on Windows for Boost 1.47 and later.

2012-11-16  Kirit Saelensminde  <kirit@felspar.com>
 Removed the `workerqueue` as it doesn't do anything useful that a work pool doesn't already do.

2012-08-17  Kirit Saelensminde  <kirit@felspar.com>
 Removed a dead constructor that does nothing in `worker`.
 No longer pass on log messages captured during tests. This stops expected errors from being displayed and confusing the test results.
 Added a basic parser for the RFC1123 formatted dates used in protocols like SMTP and HTTP. Only the format produced by the Fost libraries is currently supported.

2012-08-08  Kirit Saelensminde  <kirit@felspar.com>
 The parser lock is now recursive. This means that we can be more aggressive about using it without causing deadlocks. Also removed the parser wrapper that doesn't take a lock so all uses are explicitly forced to acquire the lock at the right time.

2012-08-04  Kirit Saelensminde  <kirit@felspar.com>
 Deliberately leak the thread counter so that it can't be destructed before threads that are terminating in a global destructor get run.

2012-08-03  Kirit Saelensminde  <kirit@felspar.com>
 Added instrumentation for the number of worker threads in use. Also added decrement to the counter implementation.
 Fixed a bug on Windows where the pre-increment would return the old value rather than the new one.
 Dynamic loading of a library now tries with platform specific prefixes and suffixes before trying the name provided.

2012-08-02  Kirit Saelensminde  <kirit@felspar.com>
 Implement JSON casts for json::array_t and json::object_t.
 Allow the use of constant workers (and in_proc) which makes certain thread wrappers more obvious to implement.
 Implement futures with void type for worker and in_proc. We can still wait on them.
 Added startswith and endswith members to the string class.

2012-07-22  Kirit Saelensminde  <kirit@felspar.com>